--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateAcceptanceTest.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateAcceptanceTest.xaml
@@ -4,44 +4,56 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
+      xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="900" d:DesignWidth="1280"
       Background="{StaticResource BackgroundGradient}"
       Title="Create Acceptance Test">
     
-    <StackPanel>
-        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
-      
-        <!-- for splitting into columns -->
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.3*"/>
-                <ColumnDefinition Width="0.7*"/>
-            </Grid.ColumnDefinitions>
+    <StackPanel Width="700" Margin="0,75,0,0">
+        <ContentControl Template="{StaticResource Headers}" Name="Header"/>
 
-            <!-- Left Column for Labels -->
-            <StackPanel Grid.Column="0" Margin="0,0,12,0">
-                <TextBlock Text="Given:" HorizontalAlignment="Right" Style="{StaticResource Label}"  Margin="0,0,0,15"/>
-                <TextBlock Text="When:" HorizontalAlignment="Right" Style="{StaticResource Label}" Margin="0,0,0,15"/>
-                <TextBlock Text="Then:" HorizontalAlignment="Right" Style="{StaticResource Label}" Margin="0,0,0,12"/>
-            </StackPanel>
+        <StackPanel Width="400">
+            <TextBlock Name="StoryNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}"  Text="{Binding CurrentUserStory.Name}"/>
 
-            <!-- Right Column for Entry Fields -->
-            <StackPanel Grid.Column="1" Margin="12,0,25,0">
-                <TextBox Name="GivenTextBox" MaxLength="25" Width="175" HorizontalAlignment="Left" Margin="0,0,0,15"/>
-                <TextBox Name="WhenTextBox" MaxLength="25" Width="175" HorizontalAlignment="Left" Margin="0,0,0,20"/>
-                <TextBox Name="ThenTextBox" MaxLength="25" Width="175" HorizontalAlignment="Left" Margin="0,0,0,20"/>
+            <AdornerDecorator Margin="0,12,0,0">
+                <TextBox Name="GivenTextBox" Style="{StaticResource DefaultTextBox}" Height="75" TextWrapping="Wrap" AcceptsReturn="True">
+                    <utility:WatermarkService.Watermark>
+                        <TextBlock Style="{StaticResource Watermark}" Name="GivenTextBlock"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">Given</TextBlock>
+                    </utility:WatermarkService.Watermark>
+                </TextBox>
+            </AdornerDecorator>
 
-                <!-- Grid for splitting buttons into columns -->
-                <Grid HorizontalAlignment="Left" Margin="40,0,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Name="CancelButton" Content="Cancel" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,20,20,0" Command="{Binding CancelCommand}" IsDefault="True"/>
-                    <Button Name="CreateButton" Content="Create" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,20,60" Command="{Binding CreateCommand}"/>
-                </Grid>
-            </StackPanel>
-        </Grid>
+            <AdornerDecorator Margin="0,12,0,0">
+                <TextBox Name="WhenTextBox" Style="{StaticResource DefaultTextBox}" Height="75" TextWrapping="Wrap" AcceptsReturn="True">
+                    <utility:WatermarkService.Watermark>
+                        <TextBlock Style="{StaticResource Watermark}" Name="WhenTextBlock"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">When</TextBlock>
+                    </utility:WatermarkService.Watermark>
+                </TextBox>
+            </AdornerDecorator>
+
+            <AdornerDecorator Margin="0,12,0,0">
+                <TextBox Name="ThenTextBox" Style="{StaticResource DefaultTextBox}" Height="75" TextWrapping="Wrap" AcceptsReturn="True">
+                    <utility:WatermarkService.Watermark>
+                        <TextBlock Style="{StaticResource Watermark}" Name="ThenTextBlock"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">Then</TextBlock>
+                    </utility:WatermarkService.Watermark>
+                </TextBox>
+            </AdornerDecorator>
+
+            <Grid Margin="0,12,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0" Name="CancelButton" Content="Cancel" 
+                        Style="{StaticResource StandardButton}" HorizontalAlignment="Right" Margin="0,0,15,0" Command="{Binding CancelCommand}"/>
+                <Button Grid.Column="1" Name="CreateButton" Content="Create" 
+                        Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Margin="15,0,0,0" Command="{Binding CreateCommand}"/>
+            </Grid>
+        </StackPanel>
     </StackPanel>
 </local:BasePage>
