--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ManageSprints.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ManageSprints.xaml
@@ -6,16 +6,16 @@
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d"
       Background="{StaticResource BackgroundGradient}"
-      d:DesignHeight="600" d:DesignWidth="1060"
+      d:DesignHeight="900" d:DesignWidth="1280"
       Title="Manage Sprints">
 
-    <StackPanel Width="750" Margin="0,25,0,0">
-        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
+    <StackPanel Width="750" Margin="0,75,0,0">
+        <ContentControl Template="{StaticResource Headers}" Name="Header"/>
 
-        <TextBlock Text="Project Sprints" HorizontalAlignment="Left" Style="{StaticResource Header}" Margin="0,10,0,0"/>
+        <TextBlock Text="Project Sprints" HorizontalAlignment="Left" Style="{StaticResource Header}"/>
         <TextBlock Text="Select One of the Following Rows To See Sprint Details" HorizontalAlignment="Left" Style="{StaticResource Label}" Foreground="Gold" Margin="5,0,0,0" />
 
-        <Grid Height="375" Margin="50,10,50,10">
+        <Grid Height="600" Margin="50,10,50,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.9*"/>
                 <RowDefinition Height="0.1*"/>
