--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateProject.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateProject.xaml
@@ -7,13 +7,13 @@
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
-      d:DesignHeight="600" d:DesignWidth="1060"
+      d:DesignHeight="900" d:DesignWidth="1280"
       Title="Create Project">
 
     <StackPanel Width="500" Margin="0,75,0,0">
-        <ContentControl  Template="{StaticResource Headers}" Name="Header"/>
+        <ContentControl Template="{StaticResource Headers}" Name="Header"/>
 
-        <Grid Margin="0,10,0,0">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -36,20 +36,20 @@
         <AdornerDecorator>
             <TextBox Name="ProjectNameTextBox" Style="{StaticResource DefaultTextBox}">
                 <utility:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Center" Name="ProjectNameTextBlock">Project Name</TextBlock>
-                </utility:WatermarkService.Watermark>
-            </TextBox>
-        </AdornerDecorator>
-        
-        <AdornerDecorator>
-            <TextBox Name="ProjectDescriptionTextBox" Height="75" TextWrapping="Wrap" AcceptsReturn="True" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0">
-                <utility:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Center" Name="ProjectDescriptionTextBlock">Description</TextBlock>
+                    <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Center" Margin="0,5,0,0" Name="ProjectNameTextBlock">Project Name</TextBlock>
                 </utility:WatermarkService.Watermark>
             </TextBox>
         </AdornerDecorator>
 
-        <Grid Margin="0,5,0,0">
+        <AdornerDecorator Margin="0,12,0,0">
+            <TextBox Name="ProjectDescriptionTextBox" Height="75" TextWrapping="Wrap" AcceptsReturn="True" Style="{StaticResource DefaultTextBox}">
+                <utility:WatermarkService.Watermark>
+                    <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5"  Name="ProjectDescriptionTextBlock">Description</TextBlock>
+                </utility:WatermarkService.Watermark>
+            </TextBox>
+        </AdornerDecorator>
+
+        <Grid Margin="0,12,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
