--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -7,12 +7,12 @@
       xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       mc:Ignorable="d"
       Background="{StaticResource BackgroundGradient}"
-      d:DesignHeight="600" d:DesignWidth="1060"
+      d:DesignHeight="900" d:DesignWidth="1280"
       x:Name="Page"
       Title="Project Dashboard">
 
-    <StackPanel Width="750" Margin="0,25,0,0">
-        <ContentControl  Template="{StaticResource Headers}" Name="Header" Margin="0,0,0,15"/>
+    <StackPanel Width="750" Margin="0,75,0,0">
+        <ContentControl Template="{StaticResource Headers}" Name="Header"/>
 
         <Button Visibility="Collapsed" Grid.Column="0" Name="ProjectDropDownButton" Content="Project List" Style="{StaticResource StandardButton}" Command="{Binding ProjectDropDown}" ContextMenuService.IsEnabled="False">
             <Button.ContextMenu>
@@ -70,10 +70,10 @@
 
                 <Separator/>
 
-                <Grid Height="220">
+                <Grid Height="450">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="0.15*"/>
-                        <RowDefinition Height="0.8*"/>
+                        <RowDefinition Height="0.07*"/>
+                        <RowDefinition Height="0.9*"/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" Name="ScrumMastersHeaderTextBlock" Text="Scrum Masters" Style="{StaticResource Header}" HorizontalAlignment="Center"/>
                     <ListBox Grid.Row="1" Name="ScrumMastersListBox" ItemsSource="{Binding CurrentProject.ScrumMasters}" Style="{StaticResource DefaultListBox}">
@@ -121,7 +121,7 @@
 
                     <TextBox Grid.Column="0" Name="SearchEmailTextBox" Style="{StaticResource DefaultTextBox}">
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="SearchEmailTextBlock">Search Email</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="SearchEmailTextBlock">Enter User Email to Add to Team</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </TextBox>
 
@@ -168,7 +168,7 @@
                                Style="{StaticResource Header}" HorizontalAlignment="Center"
                                Margin="0,10,0,10"/>
 
-                <Grid Height="275">
+                <Grid Height="506">
                     <ListBox Name="TeamMembersListBox" ItemsSource="{Binding TeamMembers}" Style="{StaticResource DefaultListBox}" HorizontalContentAlignment="Stretch">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
