--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -6,10 +6,10 @@
       xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
-      d:DesignHeight="600" d:DesignWidth="1060"
+      d:DesignHeight="900" d:DesignWidth="1280"
       Title="Register">
 
-    <StackPanel Width="500" Margin="0,75,0,0">
+    <StackPanel Width="500" Margin="0,175,0,0">
         <TextBlock Name="PageTitle" Text="Registration" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,10"/>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -18,48 +18,48 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0">
-                <AdornerDecorator Margin="0,6,0,0">
-                    <TextBox Name="FirstnameTextBox" Style="{StaticResource DefaultTextBox}">
+                <AdornerDecorator Margin="0,12,0,0">
+                    <TextBox Name="FirstnameTextBox" Style="{StaticResource DefaultTextBox}" PreviewTextInput="LetterOnlyTextBoxValidation">
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="FirstnameTextBlock">Firstname</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="FirstnameTextBlock">Firstname</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </TextBox>
                 </AdornerDecorator>
 
-                <AdornerDecorator Margin="0,6,0,0">
-                    <TextBox Name="SurnameTextBox" Style="{StaticResource DefaultTextBox}">
+                <AdornerDecorator Margin="0,12,0,0">
+                    <TextBox Name="SurnameTextBox" Style="{StaticResource DefaultTextBox}" PreviewTextInput="LetterOnlyTextBoxValidation">
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center"  Name="SurnameTextBlock">Surname</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="SurnameTextBlock">Surname</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </TextBox>
                 </AdornerDecorator>
             </StackPanel>
 
             <DockPanel Grid.Column="1" Width="64" Height="64">
-                <Button Name="ProfileButton" Margin="0,0,0,0" Click="ProfileButton_Click"/>
+                <Button Name="ProfileButton" Click="ProfileButton_Click"/>
             </DockPanel>
         </Grid>
 
-        <AdornerDecorator>
-            <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0">
+        <AdornerDecorator Margin="0,12,0,0">
+            <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}">
                 <utility:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="EmailTextBlock">E-mail</TextBlock>
+                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="EmailTextBlock">E-mail</TextBlock>
                 </utility:WatermarkService.Watermark>
             </TextBox>
         </AdornerDecorator>
 
-        <AdornerDecorator>
-            <PasswordBox Name="PasswordTextBox" Style="{StaticResource DefaultPasswordBox}" Margin="0,5,0,0" >
+        <AdornerDecorator Margin="0,12,0,0">
+            <PasswordBox Name="PasswordTextBox" Style="{StaticResource DefaultPasswordBox}">
                 <utility:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="PasswordTextBlock" >Password</TextBlock>
+                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="PasswordTextBlock" >Password</TextBlock>
                 </utility:WatermarkService.Watermark>
             </PasswordBox>
         </AdornerDecorator>
 
-        <AdornerDecorator>
-            <PasswordBox Name="ConfirmPasswordTextBox" Style="{StaticResource DefaultPasswordBox}" Margin="0,5,0,0" ToolTip="Passwords Must Match" >
+        <AdornerDecorator Margin="0,12,0,0">
+            <PasswordBox Name="ConfirmPasswordTextBox" Style="{StaticResource DefaultPasswordBox}" ToolTip="Passwords Must Match" >
                 <utility:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="ConfirmPasswordTextBlock">Confirm Password</TextBlock>
+                    <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="ConfirmPasswordTextBlock">Confirm Password</TextBlock>
                 </utility:WatermarkService.Watermark>
             </PasswordBox>
         </AdornerDecorator>
