--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Text.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Text.xaml
@@ -26,6 +26,13 @@
         <Setter Property="Foreground" Value="Black"/>
     </Style>
 
+    <Style TargetType="{x:Type TextBlock}" x:Key="ListBoxItem">
+        <Setter Property="FontFamily" Value="{StaticResource LatoBold}"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="Black"/>
+    </Style>
+
+
     <Style TargetType="{x:Type TextBlock}" x:Key="ButtonTitleLabel">
         <Setter Property="FontFamily" Value="{StaticResource LatoRegular}"/>
         <Setter Property="FontSize" Value="14"/>
